// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Error Handler Component can disable styling 1`] = `
<DocumentFragment>
  <div
    class="ss__error-handler ss__error-handler--warning"
  >
    <div
      class="ss__error-handler__message"
    >
      <svg
        class="ss__icon ss__icon--warn ss__error-handler__icon"
        height="16px"
        viewBox="0 0 56 56"
        width="16px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M31.2981 5.28228C29.8323 2.74341 26.1677 2.74341 24.7019 5.28228L0.515899 47.1737C-0.94992 49.7126 0.88235 52.8861 3.81399 52.8861H52.186C55.1176 52.8861 56.9499 49.7126 55.4841 47.1737L31.2981 5.28228ZM25.2229 35.0037L24.8264 18.837C24.8264 18.655 24.8923 18.4729 25.047 18.3686C25.1794 18.2387 25.3776 18.1601 25.5759 18.1601H30.4241C30.6223 18.1601 30.8206 18.238 30.953 18.3686C31.1071 18.4729 31.1736 18.655 31.1736 18.837L30.7988 35.0037C30.7988 35.3679 30.4682 35.6542 30.0493 35.6542H25.9724C25.5759 35.6542 25.2453 35.3679 25.2229 35.0037ZM25.1788 43.9593V39.0131C25.1788 38.5447 25.487 38.1541 25.8618 38.1541H30.0929C30.4894 38.1541 30.82 38.5447 30.82 39.0131V43.9593C30.82 44.4277 30.4894 44.8183 30.0929 44.8183H25.8618C25.487 44.8183 25.1788 44.4277 25.1788 43.9593Z"
        />
      </svg>
      <b>
        Warning: 
      </b>
      hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Error Handler Component can use custom retry onClick event 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-radius: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  border-left: 4px solid;
}

.emotion-0 .ss__error-handler__message {
  padding: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .ss__error-handler__message .ss__icon {
  margin-right: 5px;
}

.emotion-0 .ss__error-handler__button {
  background-color: white;
  color: inherit;
  width: 150px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  margin: 5px 10px;
}

.emotion-0 .ss__error-handler__button .ss__icon {
  margin-right: 5px;
}

.emotion-0.ss__error-handler--error {
  background-color: b4b4b4;
  border-left-color: #ff0000;
}

.emotion-0.ss__error-handler--error .ss__error-handler__message .ss__icon {
  fill: #ff0000;
}

.emotion-0.ss__error-handler--warning {
  background-color: b4b4b4;
  border-left-color: #ffff00;
}

.emotion-0.ss__error-handler--warning .ss__icon {
  fill: #ffff00;
}

.emotion-0.ss__error-handler--warning .ss__error-handler__button {
  border-color: #ffff00;
}

.emotion-0.ss__error-handler--info {
  background-color: b4b4bf;
  border-left-color: #0000ff;
}

.emotion-0.ss__error-handler--info .ss__error-handler__message .ss__icon {
  fill: #0000ff;
}

.emotion-1 {
  width: 16px;
  height: 16px;
  position: relative;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 5px 10px;
  position: relative;
  outline: 0;
  background-color: #fff;
  border: 1px solid #333;
}

.emotion-2:hover {
  cursor: pointer;
  background-color: #f8f8f8;
}

.emotion-2.ss__button--disabled {
  opacity: 0.7;
  border-color: rgba(51,51,51,0.7);
  background-color: initial;
}

.emotion-2.ss__button--disabled:hover {
  cursor: default;
}

<div
    class="ss__error-handler ss__error-handler--warning emotion-0"
  >
    <div
      class="ss__error-handler__message"
    >
      <svg
        class="ss__icon ss__icon--warn ss__error-handler__icon emotion-1"
        viewBox="0 0 56 56"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M31.2981 5.28228C29.8323 2.74341 26.1677 2.74341 24.7019 5.28228L0.515899 47.1737C-0.94992 49.7126 0.88235 52.8861 3.81399 52.8861H52.186C55.1176 52.8861 56.9499 49.7126 55.4841 47.1737L31.2981 5.28228ZM25.2229 35.0037L24.8264 18.837C24.8264 18.655 24.8923 18.4729 25.047 18.3686C25.1794 18.2387 25.3776 18.1601 25.5759 18.1601H30.4241C30.6223 18.1601 30.8206 18.238 30.953 18.3686C31.1071 18.4729 31.1736 18.655 31.1736 18.837L30.7988 35.0037C30.7988 35.3679 30.4682 35.6542 30.0493 35.6542H25.9724C25.5759 35.6542 25.2453 35.3679 25.2229 35.0037ZM25.1788 43.9593V39.0131C25.1788 38.5447 25.487 38.1541 25.8618 38.1541H30.0929C30.4894 38.1541 30.82 38.5447 30.82 39.0131V43.9593C30.82 44.4277 30.4894 44.8183 30.0929 44.8183H25.8618C25.487 44.8183 25.1788 44.4277 25.1788 43.9593Z"
        />
      </svg>
      <b>
        Warning: 
      </b>
      hello
    </div>
    <div
      class="ss__button ss__error-handler__button emotion-2"
      role="button"
      ssa11y="true"
      tabindex="0"
    >
      <svg
        class="ss__icon ss__icon--rotate-right ss__error-handler__icon emotion-1"
        viewBox="0 0 56 56"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M56 4.667v16.333c0 1.276-1.057 2.333-2.333 2.333h-16.333c-0.948 0-1.786-0.583-2.151-1.458-0.365-0.839-0.182-1.859 0.51-2.516l5.031-5.031c-3.427-3.172-7.948-4.995-12.724-4.995-10.281 0-18.667 8.385-18.667 18.667s8.385 18.667 18.667 18.667c5.797 0 11.156-2.625 14.729-7.255 0.182-0.255 0.51-0.401 0.839-0.438 0.328 0 0.656 0.109 0.911 0.328l4.995 5.031c0.438 0.401 0.438 1.094 0.073 1.568-5.323 6.417-13.198 10.099-21.547 10.099-15.422 0-28-12.578-28-28s12.578-28 28-28c7.182 0 14.146 2.88 19.286 7.729l4.74-4.703c0.656-0.693 1.677-0.875 2.552-0.51 0.839 0.365 1.422 1.203 1.422 2.151z"
        />
      </svg>
      Reload
    </div>
  </div>
</DocumentFragment>
`;

exports[`Error Handler Component can use custom retry onClick event 2`] = `
<DocumentFragment>
  .emotion-0 {
  border-radius: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  border-left: 4px solid;
}

.emotion-0 .ss__error-handler__message {
  padding: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .ss__error-handler__message .ss__icon {
  margin-right: 5px;
}

.emotion-0 .ss__error-handler__button {
  background-color: white;
  color: inherit;
  width: 150px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  margin: 5px 10px;
}

.emotion-0 .ss__error-handler__button .ss__icon {
  margin-right: 5px;
}

.emotion-0.ss__error-handler--error {
  background-color: b4b4b4;
  border-left-color: #ff0000;
}

.emotion-0.ss__error-handler--error .ss__error-handler__message .ss__icon {
  fill: #ff0000;
}

.emotion-0.ss__error-handler--warning {
  background-color: b4b4b4;
  border-left-color: #ffff00;
}

.emotion-0.ss__error-handler--warning .ss__icon {
  fill: #ffff00;
}

.emotion-0.ss__error-handler--warning .ss__error-handler__button {
  border-color: #ffff00;
}

.emotion-0.ss__error-handler--info {
  background-color: b4b4bf;
  border-left-color: #0000ff;
}

.emotion-0.ss__error-handler--info .ss__error-handler__message .ss__icon {
  fill: #0000ff;
}

.emotion-1 {
  width: 16px;
  height: 16px;
  position: relative;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 5px 10px;
  position: relative;
  outline: 0;
  background-color: #fff;
  border: 1px solid #333;
}

.emotion-2:hover {
  cursor: pointer;
  background-color: #f8f8f8;
}

.emotion-2.ss__button--disabled {
  opacity: 0.7;
  border-color: rgba(51,51,51,0.7);
  background-color: initial;
}

.emotion-2.ss__button--disabled:hover {
  cursor: default;
}

<div
    class="ss__error-handler ss__error-handler--warning emotion-0"
  >
    <div
      class="ss__error-handler__message"
    >
      <svg
        class="ss__icon ss__icon--warn ss__error-handler__icon emotion-1"
        viewBox="0 0 56 56"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M31.2981 5.28228C29.8323 2.74341 26.1677 2.74341 24.7019 5.28228L0.515899 47.1737C-0.94992 49.7126 0.88235 52.8861 3.81399 52.8861H52.186C55.1176 52.8861 56.9499 49.7126 55.4841 47.1737L31.2981 5.28228ZM25.2229 35.0037L24.8264 18.837C24.8264 18.655 24.8923 18.4729 25.047 18.3686C25.1794 18.2387 25.3776 18.1601 25.5759 18.1601H30.4241C30.6223 18.1601 30.8206 18.238 30.953 18.3686C31.1071 18.4729 31.1736 18.655 31.1736 18.837L30.7988 35.0037C30.7988 35.3679 30.4682 35.6542 30.0493 35.6542H25.9724C25.5759 35.6542 25.2453 35.3679 25.2229 35.0037ZM25.1788 43.9593V39.0131C25.1788 38.5447 25.487 38.1541 25.8618 38.1541H30.0929C30.4894 38.1541 30.82 38.5447 30.82 39.0131V43.9593C30.82 44.4277 30.4894 44.8183 30.0929 44.8183H25.8618C25.487 44.8183 25.1788 44.4277 25.1788 43.9593Z"
        />
      </svg>
      <b>
        Warning: 
      </b>
      hello
    </div>
    <div
      class="ss__button ss__error-handler__button emotion-2"
      role="button"
      ssa11y="true"
      tabindex="0"
    >
      <svg
        class="ss__icon ss__icon--rotate-right ss__error-handler__icon emotion-1"
        viewBox="0 0 56 56"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M56 4.667v16.333c0 1.276-1.057 2.333-2.333 2.333h-16.333c-0.948 0-1.786-0.583-2.151-1.458-0.365-0.839-0.182-1.859 0.51-2.516l5.031-5.031c-3.427-3.172-7.948-4.995-12.724-4.995-10.281 0-18.667 8.385-18.667 18.667s8.385 18.667 18.667 18.667c5.797 0 11.156-2.625 14.729-7.255 0.182-0.255 0.51-0.401 0.839-0.438 0.328 0 0.656 0.109 0.911 0.328l4.995 5.031c0.438 0.401 0.438 1.094 0.073 1.568-5.323 6.417-13.198 10.099-21.547 10.099-15.422 0-28-12.578-28-28s12.578-28 28-28c7.182 0 14.146 2.88 19.286 7.729l4.74-4.703c0.656-0.693 1.677-0.875 2.552-0.51 0.839 0.365 1.422 1.203 1.422 2.151z"
        />
      </svg>
      Reload
    </div>
  </div>
</DocumentFragment>
`;

exports[`Error Handler Component is themeable with ThemeProvider 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-radius: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  border-left: 4px solid;
}

.emotion-0 .ss__error-handler__message {
  padding: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .ss__error-handler__message .ss__icon {
  margin-right: 5px;
}

.emotion-0 .ss__error-handler__button {
  background-color: white;
  color: inherit;
  width: 150px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  margin: 5px 10px;
}

.emotion-0 .ss__error-handler__button .ss__icon {
  margin-right: 5px;
}

.emotion-0.ss__error-handler--error {
  background-color: b4b4b4;
  border-left-color: #ff0000;
}

.emotion-0.ss__error-handler--error .ss__error-handler__message .ss__icon {
  fill: #ff0000;
}

.emotion-0.ss__error-handler--warning {
  background-color: b4b4b4;
  border-left-color: #ffff00;
}

.emotion-0.ss__error-handler--warning .ss__icon {
  fill: #ffff00;
}

.emotion-0.ss__error-handler--warning .ss__error-handler__button {
  border-color: #ffff00;
}

.emotion-0.ss__error-handler--info {
  background-color: b4b4bf;
  border-left-color: #0000ff;
}

.emotion-0.ss__error-handler--info .ss__error-handler__message .ss__icon {
  fill: #0000ff;
}

.emotion-1 {
  width: 16px;
  height: 16px;
  position: relative;
}

<div
    class="ss__error-handler ss__error-handler--warning GlobalThemeClass emotion-0"
  >
    <div
      class="ss__error-handler__message"
    >
      <svg
        class="ss__icon ss__icon--warn ss__error-handler__icon emotion-1"
        viewBox="0 0 56 56"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M31.2981 5.28228C29.8323 2.74341 26.1677 2.74341 24.7019 5.28228L0.515899 47.1737C-0.94992 49.7126 0.88235 52.8861 3.81399 52.8861H52.186C55.1176 52.8861 56.9499 49.7126 55.4841 47.1737L31.2981 5.28228ZM25.2229 35.0037L24.8264 18.837C24.8264 18.655 24.8923 18.4729 25.047 18.3686C25.1794 18.2387 25.3776 18.1601 25.5759 18.1601H30.4241C30.6223 18.1601 30.8206 18.238 30.953 18.3686C31.1071 18.4729 31.1736 18.655 31.1736 18.837L30.7988 35.0037C30.7988 35.3679 30.4682 35.6542 30.0493 35.6542H25.9724C25.5759 35.6542 25.2453 35.3679 25.2229 35.0037ZM25.1788 43.9593V39.0131C25.1788 38.5447 25.487 38.1541 25.8618 38.1541H30.0929C30.4894 38.1541 30.82 38.5447 30.82 39.0131V43.9593C30.82 44.4277 30.4894 44.8183 30.0929 44.8183H25.8618C25.487 44.8183 25.1788 44.4277 25.1788 43.9593Z"
        />
      </svg>
      <b>
        Warning: 
      </b>
      hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Error Handler Component is themeable with theme prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-radius: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  border-left: 4px solid;
}

.emotion-0 .ss__error-handler__message {
  padding: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .ss__error-handler__message .ss__icon {
  margin-right: 5px;
}

.emotion-0 .ss__error-handler__button {
  background-color: white;
  color: inherit;
  width: 150px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  margin: 5px 10px;
}

.emotion-0 .ss__error-handler__button .ss__icon {
  margin-right: 5px;
}

.emotion-0.ss__error-handler--error {
  background-color: b4b4b4;
  border-left-color: #ff0000;
}

.emotion-0.ss__error-handler--error .ss__error-handler__message .ss__icon {
  fill: #ff0000;
}

.emotion-0.ss__error-handler--warning {
  background-color: b4b4b4;
  border-left-color: #ffff00;
}

.emotion-0.ss__error-handler--warning .ss__icon {
  fill: #ffff00;
}

.emotion-0.ss__error-handler--warning .ss__error-handler__button {
  border-color: #ffff00;
}

.emotion-0.ss__error-handler--info {
  background-color: b4b4bf;
  border-left-color: #0000ff;
}

.emotion-0.ss__error-handler--info .ss__error-handler__message .ss__icon {
  fill: #0000ff;
}

.emotion-1 {
  width: 16px;
  height: 16px;
  position: relative;
}

<div
    class="ss__error-handler ss__error-handler--warning GlobalThemeClass emotion-0"
  >
    <div
      class="ss__error-handler__message"
    >
      <svg
        class="ss__icon ss__icon--warn ss__error-handler__icon emotion-1"
        viewBox="0 0 56 56"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M31.2981 5.28228C29.8323 2.74341 26.1677 2.74341 24.7019 5.28228L0.515899 47.1737C-0.94992 49.7126 0.88235 52.8861 3.81399 52.8861H52.186C55.1176 52.8861 56.9499 49.7126 55.4841 47.1737L31.2981 5.28228ZM25.2229 35.0037L24.8264 18.837C24.8264 18.655 24.8923 18.4729 25.047 18.3686C25.1794 18.2387 25.3776 18.1601 25.5759 18.1601H30.4241C30.6223 18.1601 30.8206 18.238 30.953 18.3686C31.1071 18.4729 31.1736 18.655 31.1736 18.837L30.7988 35.0037C30.7988 35.3679 30.4682 35.6542 30.0493 35.6542H25.9724C25.5759 35.6542 25.2453 35.3679 25.2229 35.0037ZM25.1788 43.9593V39.0131C25.1788 38.5447 25.487 38.1541 25.8618 38.1541H30.0929C30.4894 38.1541 30.82 38.5447 30.82 39.0131V43.9593C30.82 44.4277 30.4894 44.8183 30.0929 44.8183H25.8618C25.487 44.8183 25.1788 44.4277 25.1788 43.9593Z"
        />
      </svg>
      <b>
        Warning: 
      </b>
      hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Error Handler Component is themeable with theme prop overrides ThemeProvider 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-radius: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  border-left: 4px solid;
}

.emotion-0 .ss__error-handler__message {
  padding: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .ss__error-handler__message .ss__icon {
  margin-right: 5px;
}

.emotion-0 .ss__error-handler__button {
  background-color: white;
  color: inherit;
  width: 150px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  margin: 5px 10px;
}

.emotion-0 .ss__error-handler__button .ss__icon {
  margin-right: 5px;
}

.emotion-0.ss__error-handler--error {
  background-color: b4b4b4;
  border-left-color: #ff0000;
}

.emotion-0.ss__error-handler--error .ss__error-handler__message .ss__icon {
  fill: #ff0000;
}

.emotion-0.ss__error-handler--warning {
  background-color: b4b4b4;
  border-left-color: #ffff00;
}

.emotion-0.ss__error-handler--warning .ss__icon {
  fill: #ffff00;
}

.emotion-0.ss__error-handler--warning .ss__error-handler__button {
  border-color: #ffff00;
}

.emotion-0.ss__error-handler--info {
  background-color: b4b4bf;
  border-left-color: #0000ff;
}

.emotion-0.ss__error-handler--info .ss__error-handler__message .ss__icon {
  fill: #0000ff;
}

.emotion-1 {
  width: 16px;
  height: 16px;
  position: relative;
}

<div
    class="ss__error-handler ss__error-handler--warning themeOverride emotion-0"
  >
    <div
      class="ss__error-handler__message"
    >
      <svg
        class="ss__icon ss__icon--warn ss__error-handler__icon emotion-1"
        viewBox="0 0 56 56"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M31.2981 5.28228C29.8323 2.74341 26.1677 2.74341 24.7019 5.28228L0.515899 47.1737C-0.94992 49.7126 0.88235 52.8861 3.81399 52.8861H52.186C55.1176 52.8861 56.9499 49.7126 55.4841 47.1737L31.2981 5.28228ZM25.2229 35.0037L24.8264 18.837C24.8264 18.655 24.8923 18.4729 25.047 18.3686C25.1794 18.2387 25.3776 18.1601 25.5759 18.1601H30.4241C30.6223 18.1601 30.8206 18.238 30.953 18.3686C31.1071 18.4729 31.1736 18.655 31.1736 18.837L30.7988 35.0037C30.7988 35.3679 30.4682 35.6542 30.0493 35.6542H25.9724C25.5759 35.6542 25.2453 35.3679 25.2229 35.0037ZM25.1788 43.9593V39.0131C25.1788 38.5447 25.487 38.1541 25.8618 38.1541H30.0929C30.4894 38.1541 30.82 38.5447 30.82 39.0131V43.9593C30.82 44.4277 30.4894 44.8183 30.0929 44.8183H25.8618C25.487 44.8183 25.1788 44.4277 25.1788 43.9593Z"
        />
      </svg>
      <b>
        Warning: 
      </b>
      hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Error Handler Component renders using custom error 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-radius: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  border-left: 4px solid;
}

.emotion-0 .ss__error-handler__message {
  padding: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .ss__error-handler__message .ss__icon {
  margin-right: 5px;
}

.emotion-0 .ss__error-handler__button {
  background-color: white;
  color: inherit;
  width: 150px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  margin: 5px 10px;
}

.emotion-0 .ss__error-handler__button .ss__icon {
  margin-right: 5px;
}

.emotion-0.ss__error-handler--error {
  background-color: b4b4b4;
  border-left-color: #ff0000;
}

.emotion-0.ss__error-handler--error .ss__error-handler__message .ss__icon {
  fill: #ff0000;
}

.emotion-0.ss__error-handler--warning {
  background-color: b4b4b4;
  border-left-color: #ffff00;
}

.emotion-0.ss__error-handler--warning .ss__icon {
  fill: #ffff00;
}

.emotion-0.ss__error-handler--warning .ss__error-handler__button {
  border-color: #ffff00;
}

.emotion-0.ss__error-handler--info {
  background-color: b4b4bf;
  border-left-color: #0000ff;
}

.emotion-0.ss__error-handler--info .ss__error-handler__message .ss__icon {
  fill: #0000ff;
}

.emotion-1 {
  width: 16px;
  height: 16px;
  position: relative;
}

<div
    class="ss__error-handler ss__error-handler--warning emotion-0"
  >
    <div
      class="ss__error-handler__message"
    >
      <svg
        class="ss__icon ss__icon--warn ss__error-handler__icon emotion-1"
        viewBox="0 0 56 56"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M31.2981 5.28228C29.8323 2.74341 26.1677 2.74341 24.7019 5.28228L0.515899 47.1737C-0.94992 49.7126 0.88235 52.8861 3.81399 52.8861H52.186C55.1176 52.8861 56.9499 49.7126 55.4841 47.1737L31.2981 5.28228ZM25.2229 35.0037L24.8264 18.837C24.8264 18.655 24.8923 18.4729 25.047 18.3686C25.1794 18.2387 25.3776 18.1601 25.5759 18.1601H30.4241C30.6223 18.1601 30.8206 18.238 30.953 18.3686C31.1071 18.4729 31.1736 18.655 31.1736 18.837L30.7988 35.0037C30.7988 35.3679 30.4682 35.6542 30.0493 35.6542H25.9724C25.5759 35.6542 25.2453 35.3679 25.2229 35.0037ZM25.1788 43.9593V39.0131C25.1788 38.5447 25.487 38.1541 25.8618 38.1541H30.0929C30.4894 38.1541 30.82 38.5447 30.82 39.0131V43.9593C30.82 44.4277 30.4894 44.8183 30.0929 44.8183H25.8618C25.487 44.8183 25.1788 44.4277 25.1788 43.9593Z"
        />
      </svg>
      <b>
        Warning: 
      </b>
      hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Error Handler Component renders with classname 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-radius: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  border-left: 4px solid;
}

.emotion-0 .ss__error-handler__message {
  padding: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .ss__error-handler__message .ss__icon {
  margin-right: 5px;
}

.emotion-0 .ss__error-handler__button {
  background-color: white;
  color: inherit;
  width: 150px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  margin: 5px 10px;
}

.emotion-0 .ss__error-handler__button .ss__icon {
  margin-right: 5px;
}

.emotion-0.ss__error-handler--error {
  background-color: b4b4b4;
  border-left-color: #ff0000;
}

.emotion-0.ss__error-handler--error .ss__error-handler__message .ss__icon {
  fill: #ff0000;
}

.emotion-0.ss__error-handler--warning {
  background-color: b4b4b4;
  border-left-color: #ffff00;
}

.emotion-0.ss__error-handler--warning .ss__icon {
  fill: #ffff00;
}

.emotion-0.ss__error-handler--warning .ss__error-handler__button {
  border-color: #ffff00;
}

.emotion-0.ss__error-handler--info {
  background-color: b4b4bf;
  border-left-color: #0000ff;
}

.emotion-0.ss__error-handler--info .ss__error-handler__message .ss__icon {
  fill: #0000ff;
}

.emotion-1 {
  width: 16px;
  height: 16px;
  position: relative;
}

<div
    class="ss__error-handler ss__error-handler--warning classy emotion-0"
  >
    <div
      class="ss__error-handler__message"
    >
      <svg
        class="ss__icon ss__icon--warn ss__error-handler__icon emotion-1"
        viewBox="0 0 56 56"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M31.2981 5.28228C29.8323 2.74341 26.1677 2.74341 24.7019 5.28228L0.515899 47.1737C-0.94992 49.7126 0.88235 52.8861 3.81399 52.8861H52.186C55.1176 52.8861 56.9499 49.7126 55.4841 47.1737L31.2981 5.28228ZM25.2229 35.0037L24.8264 18.837C24.8264 18.655 24.8923 18.4729 25.047 18.3686C25.1794 18.2387 25.3776 18.1601 25.5759 18.1601H30.4241C30.6223 18.1601 30.8206 18.238 30.953 18.3686C31.1071 18.4729 31.1736 18.655 31.1736 18.837L30.7988 35.0037C30.7988 35.3679 30.4682 35.6542 30.0493 35.6542H25.9724C25.5759 35.6542 25.2453 35.3679 25.2229 35.0037ZM25.1788 43.9593V39.0131C25.1788 38.5447 25.487 38.1541 25.8618 38.1541H30.0929C30.4894 38.1541 30.82 38.5447 30.82 39.0131V43.9593C30.82 44.4277 30.4894 44.8183 30.0929 44.8183H25.8618C25.487 44.8183 25.1788 44.4277 25.1788 43.9593Z"
        />
      </svg>
      <b>
        Warning: 
      </b>
      hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Error Handler Component uses bocachica theme 1`] = `
<DocumentFragment>
  .emotion-0 {
  border-radius: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  border-left: 4px solid;
}

.emotion-0 .ss__error-handler__message {
  padding: 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 .ss__error-handler__message .ss__icon {
  margin-right: 5px;
}

.emotion-0 .ss__error-handler__button {
  background-color: white;
  color: inherit;
  border-color: black;
  width: 150px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  margin: 5px 10px;
}

.emotion-0 .ss__error-handler__button .ss__icon {
  margin-right: 5px;
}

.emotion-0.ss__error-handler--error {
  background-color: b4b4b4;
  border-left-color: #ff0000;
}

.emotion-0.ss__error-handler--error .ss__error-handler__message .ss__icon {
  fill: #ff0000;
}

.emotion-0.ss__error-handler--warning {
  background-color: b4b4b4;
  border-left-color: #ffff00;
}

.emotion-0.ss__error-handler--warning .ss__icon {
  fill: #ffff00;
}

.emotion-0.ss__error-handler--warning .ss__error-handler__button {
  border-color: #ffff00;
}

.emotion-0.ss__error-handler--info {
  background-color: b4b4bf;
  border-left-color: #0000ff;
}

.emotion-0.ss__error-handler--info .ss__error-handler__message .ss__icon {
  fill: #0000ff;
}

.emotion-1 {
  fill: #6d7175;
  width: 16px;
  height: 16px;
  position: relative;
}

<div
    class="ss__error-handler ss__error-handler--warning emotion-0"
  >
    <div
      class="ss__error-handler__message"
    >
      <svg
        class="ss__icon ss__icon--warn ss__error-handler__icon emotion-1"
        viewBox="0 0 56 56"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M31.2981 5.28228C29.8323 2.74341 26.1677 2.74341 24.7019 5.28228L0.515899 47.1737C-0.94992 49.7126 0.88235 52.8861 3.81399 52.8861H52.186C55.1176 52.8861 56.9499 49.7126 55.4841 47.1737L31.2981 5.28228ZM25.2229 35.0037L24.8264 18.837C24.8264 18.655 24.8923 18.4729 25.047 18.3686C25.1794 18.2387 25.3776 18.1601 25.5759 18.1601H30.4241C30.6223 18.1601 30.8206 18.238 30.953 18.3686C31.1071 18.4729 31.1736 18.655 31.1736 18.837L30.7988 35.0037C30.7988 35.3679 30.4682 35.6542 30.0493 35.6542H25.9724C25.5759 35.6542 25.2453 35.3679 25.2229 35.0037ZM25.1788 43.9593V39.0131C25.1788 38.5447 25.487 38.1541 25.8618 38.1541H30.0929C30.4894 38.1541 30.82 38.5447 30.82 39.0131V43.9593C30.82 44.4277 30.4894 44.8183 30.0929 44.8183H25.8618C25.487 44.8183 25.1788 44.4277 25.1788 43.9593Z"
        />
      </svg>
      <b>
        Warning: 
      </b>
      hello
    </div>
  </div>
</DocumentFragment>
`;
